--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "bulma-checkradio": "^0.1.11",
     "bulma-switch": "^0.1.12",
     "jquery": "^3.2.1",
-    "js-cookie": "^2.2.0"
+    "js-cookie": "^2.2.0",
+    "cross-env": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
