--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint src/**/*.{js,jsx} --fix",
     "dev": "cross-env NODE_ENV=development webpack-dev-server",
     "start": "npm run dev",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "build": "webpack --progress --hide-modules",
     "precommit": "lint-staged"
   },
   "husky": {
