--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "bulma-switch": "^0.1.12",
     "jquery": "^3.2.1",
     "js-cookie": "^2.2.0",
-    "cross-env": "^5.2.0"
+    "cross-env": "^5.2.0",
+    "webpack": "^4.29.6"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
