--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint src/**/*.{js,jsx} --fix",
     "dev": "cross-env NODE_ENV=development webpack-dev-server",
     "start": "npm run dev",
-    "build": "webpack --progress --hide-modules",
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
     "precommit": "lint-staged"
   },
   "husky": {
@@ -37,9 +37,7 @@
     "bulma-checkradio": "^0.1.11",
     "bulma-switch": "^0.1.12",
     "jquery": "^3.2.1",
-    "js-cookie": "^2.2.0",
-    "cross-env": "^5.2.0",
-    "webpack": "^4.29.6"
+    "js-cookie": "^2.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
